--- a/wp-content/themes/uhc/package.json
+++ b/wp-content/themes/uhc/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
     "bootstrap": "^4.6.0",
+    "gulp-install": "^1.1.0",
     "object-fit-images": "^3.2.4"
   },
   "browserslist": [
