--- a/wp-content/themes/uhc/package.json
+++ b/wp-content/themes/uhc/package.json
@@ -27,7 +27,8 @@
     "body-scroll-lock": "^3.1.5",
     "bootstrap": "^4.6.0",
     "gulp-install": "^1.1.0",
-    "object-fit-images": "^3.2.4"
+    "object-fit-images": "^3.2.4",
+    "swiper": "^11.1.11"
   },
   "browserslist": [
     "last 1 version",
